--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Ricardo Calixto <rcalixtos@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --mode development"
+    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --mode development"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
@@ -14,7 +15,8 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.8"
+    "webpack-cli": "^3.3.8",
+    "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
     "react": "^16.9.0",
